--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,49 +1,41 @@
 <app-navigation></app-navigation>
+<div class="moviesearch">
+<form (submit)="searchMovies()">
+    <input type="text" class="form-control" [(ngModel)]="searchStr" name="searchStr">
+    <button class="btn btn-primary btn-lg">Find</button>
+  </form> 
+</div>
+
+<div class="movieresults">
+      <div class="body">
+  <div *ngFor="let movie of popularList; let i=index" class="col-md-2">
+  <div class="popMovie" *ngIf="i < 6">
+      <p class="title">{{ movie.title }}</p>
+     <img *ngIf="movie.poster_path" class="thumbnail" style="display: inline-block" src="http://image.tmdb.org/t/p/w200/{{ movie.poster_path }}" alt="">
+     <p class="title">{{movie.release_date}}</p>
+  <p><a class="btn btn-default" routerLink="/movie/{{movie.id}}" role="button">View details &raquo;</a></p>
+  </div>
+</div>
+</div>
+</div>
 
 
-        <h1>Find A Movie</h1>
-        <form (submit)="searchMovies()">
-          <input type="text" class="form-control" [(ngModel)]="searchStr" name="searchStr">
-          <br>
-          <button class="btn btn-primary btn-lg">Find</button>
-        </form>
 
+<div class="movieresults">
+  <div *ngIf="searchRes" class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Search Results</h3>
+      </div>
+      <div class="body">
+            <div *ngFor="let movie of searchRes;let i=index" class="col-md-2">
+                <div *ngIf="i < 6">
+                    <p class="title">{{movie.title}}</p>
+                <img *ngIf="movie.poster_path" class="thumbnail" style="display: inline-block" src="http://image.tmdb.org/t/p/w200/{{movie.poster_path}}">
 
-           <!--Search Result Area-->
-           
-
-  
-        <h3>Popular Movies</h3>
-
-
-  <div class="movieresults">
-      <div *ngFor="let movie of popularList; let i=index" class="col-md-2">
-      <div *ngIf="i < 6">
-         <img *ngIf="movie.poster_path" class="thumbnail" style="display: inline-block" src="http://image.tmdb.org/t/p/w200/{{ movie.poster_path }}" alt="">
-         <h4>{{ movie.title }}</h4>
-         <p>{{ movie.release_date }}</p>
-      <p><a class="btn btn-default" routerLink="/movie/{{movie.id}}" role="button">View details &raquo;</a></p>
+                <p class="title">{{movie.release_date}}</p>
+                <p><a class="button" routerLink="/movie/{{movie.id}}" role="button">View details &raquo;</a></p>
+            </div>
+        </div>
       </div>
     </div>
-
-   </div>
-
-
-
-   <div class="movieresults">
-      <div *ngIf="searchRes" class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Search Results</h3>
-          </div>
-          <div class="body">
-                <div *ngFor="let movie of searchRes;let i=index" class="col-md-2">
-                    <div *ngIf="i < 6">
-                    <img *ngIf="movie.poster_path" class="thumbnail" style="display: inline-block" src="http://image.tmdb.org/t/p/w200/{{movie.poster_path}}">
-                    <h4>{{movie.title}}</h4>
-                    <p>{{movie.release_date}}</p>
-                    <p><a class="button" routerLink="/movie/{{movie.id}}" role="button">View details &raquo;</a></p>
-                </div>
-            </div>
-          </div>
-        </div>
-        </div>
+    </div>
