--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -13,6 +13,7 @@
         </ul>
         <br>
         <a *ngIf="movie.homepage" href="{{movie.homepage}}" target="_blank" class="btn btn-default">Visit Movie Website</a>
+        <button class="favorite">Favorites</button>
     </div>
   </div>
 </div>
